One more option + ability to grab title from webpage

--- a/dada/installer-disabled/templates/installer-magic_template_content.tmpl
+++ b/dada/installer-disabled/templates/installer-magic_template_content.tmpl
@@ -1,10 +1,37 @@
 <h1>Heading 1</h1> 
 
 <fieldset> 
-    <legend>Legend</legend>
-    <p>
-         Vero idque delenit eum ex, vix utroque torquatos consectetuer ei. At nam accusamus concludaturque, eam te idque dolorem omnesque. Ut est ludus everti, tation molestiae 
-    </p>
+    <legend>Fieldset Legend</legend>
+    <form> 
+        <p>
+            <label>Form Label</label> 
+            <input type="text" name="" id="" value="text box" /> 
+        </p>
+        <p>
+            <textarea>
+                Textarea
+            </textarea>
+        </p>
+        
+        <p>
+
+            <input type="checkbox" name="" id="" value="text box" /> 
+            <label>Checkbox</label>
+            <br />
+            
+            <input type="checkbox" name="" id="" value="text box" /> 
+            <label>Checkbox2</label> 
+            <br />
+            
+            
+            <input type="checkbox" name="" id="" value="text box" /> 
+            <label>Checkbox3</label> 
+
+        </p>
+        
+        
+    </form> 
+    
     
 </fieldset>
 
