--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1183,28 +1183,33 @@ editors also have the ability to make simple HTML tables for basic layouts.
                     <input type="checkbox" name="template_options_add_base_href" id="template_options_add_base_href" value="1" />
                     <label for="template_options_add_base_href">Add a, &lt;base href=&quot;...&quot;&gt; tag:</label><br />
                     <input type="text" name="template_options_base_href_url" id="template_options_base_href_url"  class="full" /><br />
-             
-                     Replace content from the: <br />
-                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_body" value="body" checked="checked"> 
-                    <label for="template_options_replace_content_from_body">&lt;body&gt; tag</label>
-                    <br />
-                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_id" value="id"> 
-                    <label for="template_options_replace_content_from_id">css id:</label>
-                    <input type="text" name="template_options_replace_id" id="template_options_replace_id" value="" />
-                    <br />
-                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_class" value="class"> 
-                    <label for="template_options_replace_content_from_class">css class:</label>
-                    <input type="text" name="template_options_replace_class" id="template_options_replace_class" value="" />
-                    </p>
-                    <p><strong>Stylesheet Options</strong><br />
+                </p>
+                
+                    <p>
+                        <label for="template_options_head_content_added_by">
+                            Place <!-- tmpl_var PROGRAM_NAME -->'s head content
+                        </label>
+                        <select name="template_options_head_content_added_by" id="template_options_head_content_added_by"> 
+                            <option value="push" selected="selected">after</option>
+                            <option value="unshift">before</option>
+                        </select> 
+                        <label for="template_options_head_content_added_by">
+                            existing content.
+                        </label>
+                    <br /> 
+
+                        
+                    
+                
+                    <p><strong>Stylesheet Options:</strong><br />
                     <input type="checkbox" name="template_options_add_app_css" id="template_options_add_app_css"  value="1" />
-                    <label for="template_options_add_app_css">Include Dada Mail's own styles</label><br />
+                    <label for="template_options_add_app_css">Include Dada Mail's own stylesheet</label><br />
             
                     <input type="checkbox" name="template_options_add_custom_css" id="template_options_add_custom_css" value="1"/>
                     <label for="template_options_add_custom_css">Include a custom stylesheet:</label><br />
                     <input type="text" name="template_options_custom_css_url" id="template_options_custom_css_url" class="full" />
             	    </p> 
-            	    <p><strong>Javascript Options</strong><br />
+            	    <p><strong>Javascript Options:</strong><br />
                     <label for="template_options_include_jquery_lib">
                     <input type="checkbox" name="template_options_include_jquery_lib" id="template_options_include_jquery_lib" value="1" checked="checked" />
                         Include a Copy of jQuery (v1.11.3)
@@ -1220,6 +1225,20 @@ editors also have the ability to make simple HTML tables for basic layouts.
                         Include Dada Mail's JavaScript User-Facing Enhancements
                     </label>
                 </p>
+                
+                
+                    <p><strong>Place <!-- tmpl_var PROGRAM_NAME -->'s body content inside the:</strong> <br />
+                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_body" value="body" checked="checked"> 
+                    <label for="template_options_replace_content_from_body">&lt;body&gt; tag</label>
+                    <br />
+                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_id" value="id"> 
+                    <label for="template_options_replace_content_from_id">tag with css id:</label>
+                    <input type="text" name="template_options_replace_id" id="template_options_replace_id" value="" />
+                    <br />
+                    <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_class" value="class"> 
+                    <label for="template_options_replace_content_from_class">tag with css class:</label>
+                    <input type="text" name="template_options_replace_class" id="template_options_replace_class" value="" />
+                    </p>
                     </blockquote>
                 </div> 
 	
