--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -1,3 +1,4 @@
+<!-- begin <!-- tmpl_var PROGRAM_NAME --> list_template_header_code_block.tmpl --> 
 
 <!-- tmpl_if include_jquery_lib --> 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.11.3.min.js"></script>
@@ -37,3 +38,4 @@
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if -->
 
+<!-- end <!-- tmpl_var PROGRAM_NAME --> list_template_header_code_block.tmpl --> 
