A few new things.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1222,7 +1222,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
                 
                     <label for="template_options_include_app_user_js">
                         <input type="checkbox" name="template_options_include_app_user_js" id="template_options_include_app_user_js" value="1" checked="checked" />
-                        Include Dada Mail's JavaScript User-Facing Enhancements
+                        Include <!-- tmpl_var PROGRAM_NAME -->'s JavaScript User-Facing Enhancements
                     </label>
                 </p>
                 
