--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -122,7 +122,7 @@ function confirm_profile_removal(form_name) {
     <ul>
         <!-- tmpl_if expr="profile_feature_mailing_list_subscriptions == 1" -->
             <li>    
-                <a href="#mailing_list_subscriptions">
+                <a href="<!-- tmpl_var WHOLE_URL -->#mailing_list_subscriptions">
                     Mailing List Subscriptions
                 </a>
             </li>        
@@ -131,7 +131,7 @@ function confirm_profile_removal(form_name) {
         <!-- tmpl_if expr="profile_feature_profile_fields == 1" -->
             <!-- tmpl_if subscriber_fields -->
                 <li>    
-                    <a href="#profile_fields">
+                    <a href="<!-- tmpl_var WHOLE_URL -->#profile_fields">
                         Profile Fields
                     </a>
                 </li>
@@ -141,7 +141,7 @@ function confirm_profile_removal(form_name) {
         <!-- tmpl_if protected_directories --> 
             <!-- tmpl_if expr="profile_feature_protected_directories == 1" -->    
                 <li>    
-                    <a href="#protected_directories">
+                    <a href="<!-- tmpl_var WHOLE_URL -->#protected_directories">
                         Protected Directories
                     </a>
                 </li>
@@ -150,7 +150,7 @@ function confirm_profile_removal(form_name) {
                 
         <!-- tmpl_if expr="profile_feature_update_email_address == 1" -->
             <li>    
-                <a href="#update_email_address">
+                <a href="<!-- tmpl_var WHOLE_URL -->#update_email_address">
                     Update Your Profile Email Address
                 </a>
             </li>        
@@ -159,7 +159,7 @@ function confirm_profile_removal(form_name) {
         
         <!-- tmpl_if expr="profile_feature_change_password == 1" -->
             <li>    
-                <a href="#change_password">
+                <a href="<!-- tmpl_var WHOLE_URL -->#change_password">
                     Change Your Profile Password
                 </a>
             </li>
@@ -168,7 +168,7 @@ function confirm_profile_removal(form_name) {
         
         <!-- tmpl_if expr="profile_feature_delete_profile == 1" -->
             <li>    
-                <a href="#delete_profile">
+                <a href="<!-- tmpl_var WHOLE_URL -->#delete_profile">
                     Delete This Profile
                 </a>
             </li>
