Hey, let's add a link to wtf this is! #brilliant

--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -9,6 +9,15 @@
 </div>
 <div id="screen_meta" data-menu_highlight="web_services"></div>
 
+<div class="clearskiesbox">
+    <p>Confused? See the 
+        <a href="http://dadamailproject.com/d/features-restful_web_services.pod.html" target="_blank">
+        docs on Web Services
+       </a>
+        to learn how to utilize the RESTful Web Services API.</p> 
+</div>
+
+
 <!-- tmpl_if keys_reset --> 
     	<div class="clearskiesbox" id="alertbox">
         <p>
