Do not have the profile help screen, anymore.

--- a/dada/templates/profile_widget.tmpl
+++ b/dada/templates/profile_widget.tmpl
@@ -14,7 +14,7 @@
 		Hello, <!-- tmpl_var profile.email -->
 		[<a href="<!-- tmpl_var PROGRAM_URL -->/profile/">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->/profile_logout/">Logout</a>]
 	<!-- tmpl_else --> 
-		[<a href="<!-- tmpl_var PROGRAM_URL -->/profile_login/">Profile Register/Log In</a>] (<a href="<!-- tmpl_var PROGRAM_URL -->/profile_help/">What's This?</a>)
+		[<a href="<!-- tmpl_var PROGRAM_URL -->/profile_login/">Profile Register/Log In</a>]
 	<!-- /tmpl_if --> 
 <!-- tmpl_else --> 
 	<!-- profiles not enabled. --> 
