OK! Getting some where.

--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -9,6 +9,7 @@
         <fieldset>
             <legend>Scheduling Options</legend>    
 
+            <input type="hidden" name="schedule_html_body_checksum" id="schedule_html_body_checksum" value="" />
             <p>
                 <input type="checkbox" name="schedule_activated" id="schedule_activated" value="1" class="schedule_field" />
                 <label for="schedule_activated">
