This makes it possible to crop a webpage, and send only part of it. Hurray!

--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -37,7 +37,7 @@
         <!-- /tmpl_if -->
 
         <!-- tmpl_if expr="(draft_role eq 'schedule')" -->
-            <input type="submit" class="bigger_button processing sendmassmailing justatest"  name="process" id="submit_test_mailing" value="Test" />    
+            <input type="submit" class="bigger_button processing sendmassmailing justatest"  name="process" id="submit_test_mailing" value="Send Test" />    
             &nbsp;&nbsp;|&nbsp;&nbsp;
             <input type="submit" class="bigger_button processing save_msg"         name="process"  value="Save Schedule"   data-save_draft_role="schedule"    />
         <!-- /tmpl_if -->
