User Agent Stuff (not completed!)

--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -340,6 +340,13 @@
 			Abuse Reports
 			</a>
 			</li>
+
+			<li>
+			<a href="#user_agents">
+			User Agents
+			</a>
+			</li>
+
 			
 			
 		</ul>
@@ -648,9 +655,12 @@
 			<div class="floatclear"></div>	
 		</fieldset>
 		
-		
 	</div> 
 
+	<div id="user_agents"> 
+		<div id="user_agents_report_graph_loading"></div> 
+		<div id="user_agents_report_graph" data-width="720" data-height="400" style="width:720px;height:400px"></div>
+    </div> 
 
 
 
