Change that just slightly.

--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -312,7 +312,7 @@
 		<p>
 		  <input type="radio" name="plaintext_content_from" id="plaintext_content_from_auto" value="auto" checked="checked" />
 		  <label for="plaintext_content_from_auto">
-		   Create a PlainText version automatically
+		   Create a PlainText Version automatically
 		  </label>
 		 </p>
 
